# website

./: .eslintrc  .gitignore  .gitmodules  globals.css  localize.ts  next-sitemap.config.js  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  theme.config.jsx  theme.config.tsx  tsconfig.json
components/: Animation.jsx  Animation.module.css  Animation.tsx  Avatar.tsx  Blog.tsx  Comments.tsx  Cover.tsx  Footer.tsx  Hero.module.css  Hero.tsx  Highlight.tsx  Home.tsx  Jumbotron.module.css  Jumbotron.tsx  Posts.tsx  Pricing.module.css  Pricing.tsx  index.js  index.ts
examples/rust/: Cargo.toml
hooks/: index.ts  redirectWithLocale.ts  useFind.ts
lab/: common.mdx  draft.md  event-bus.mdx  event-sourcing.mdx  modules.mdx  summary.md  template.mdx  tutorial.mdx  white-book.md
lab/adr/: micro-services.mdx
lab/architecture/: _meta.json  immutability.mdx  introduction.mdx  never-throw.mdx
lab/organization/: agents.md  gantt.mdx  retroplanning.md
pages/: 404.tsx  _app.tsx  _document.tsx  _meta.json  _meta.ts  architecture.mdx  index.mdx  index.ts  index.tsx
pages/architecture/: dependency-injection.mdx  event-sourcing.mdx  from-to.mdx  introduction.mdx  modules.mdx
pages/blog/: Posts.tsx  index.mdx
pages/docs/: _meta.json  supported_languages.mdx
pages/en/: _meta.ts  index.mdx  manifesto.mdx  studio.mdx
pages/fr/: _meta.ts  index.mdx  manifesto.mdx  studio.mdx
pages/learn/: _meta.ts  introduction.mdx  key_concepts.mdx  supported_languages.mdx
todo/: Cargo.toml  Justfile  README.md  sort_derive.py
todo/clients/axum/: Cargo.toml  examples.http
todo/clients/axum/src/: main.rs  runtime.rs
todo/clients/yew/: Cargo.toml
todo/clients/yew/src/: main.rs  runtime.rs
todo/crates/framework/: Cargo.toml
todo/crates/framework/src/: lib.rs
todo/services/: Cargo.toml
todo/services/src/: lib.rs  localstore.rs  memstore.rs
(+179 files in other folders)
