[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application = { path = "../application" }
framework = { path = "../crates/framework" }
gloo-storage = { version = "0.3.0", optional = true }
tokio = { version = "1.35.0", optional = true }

[features]
localstore = ["dep:gloo-storage"]
memstore = ["dep:tokio"]
