[package]
name = "axum-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
application = { path = "../../application" }
axum = "0.7.2"
framework = { path = "../../crates/framework" }
serde = "1.0.193"
services = { path = "../../services", features = ["memstore"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.18"
