[package]
name = "framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
auto-delegate = "0.0.9"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.51"
